--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -1621,6 +1621,7 @@ border-radius: 21px;</string>
         <family>MuseoModerno SemiBold</family>
         <pointsize>30</pointsize>
         <bold>true</bold>
+        <kerning>false</kerning>
        </font>
       </property>
       <property name="styleSheet">
@@ -1993,6 +1994,9 @@ QPushButton:hover{
         </size>
        </property>
        <property name="checkable">
+        <bool>false</bool>
+       </property>
+       <property name="checked">
         <bool>false</bool>
        </property>
        <property name="flat">
@@ -2527,7 +2531,7 @@ border-radius: 21px</string>
       <widget class="QPushButton" name="fullScreenGraph">
        <property name="geometry">
         <rect>
-         <x>410</x>
+         <x>415</x>
          <y>15</y>
          <width>146</width>
          <height>16</height>
@@ -2791,31 +2795,27 @@ QPushButton:hover{
         <string>Добавить</string>
        </property>
       </widget>
-      <widget class="QTableWidget" name="tableWidget">
+      <widget class="QScrollArea" name="exp_user">
        <property name="geometry">
         <rect>
          <x>20</x>
          <y>35</y>
-         <width>231</width>
-         <height>131</height>
+         <width>316</width>
+         <height>130</height>
         </rect>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>316</width>
+         <height>130</height>
+        </size>
+       </property>
        <property name="styleSheet">
-        <string notr="true">QTableView{
-color: rgb(212, 212, 212);
-	background-color: transparent;
-border-radius: 0px;
-border:none;
+        <string notr="true">*{
+    background: transparent;
+border: none;
 }
-QHeaderView::section{
-	background-color: transparent;
-	border-top: none;
-border-right: none;
-border-left: none;
-	border-bottom: 1px solid rgb(54, 59, 62);
-color: rgb(212, 212, 212);
-	font: 10pt &quot;Inter V&quot;;
-}
+
 QScrollBar:vertical {
 	border: none;
     background: transparent;
@@ -2849,75 +2849,155 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
 	background: none;
 }</string>
        </property>
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
-       <property name="tabKeyNavigation">
-        <bool>false</bool>
-       </property>
-       <property name="showDropIndicator" stdset="0">
-        <bool>false</bool>
-       </property>
-       <property name="dragDropOverwriteMode">
-        <bool>false</bool>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::NoSelection</enum>
-       </property>
-       <property name="textElideMode">
-        <enum>Qt::ElideMiddle</enum>
-       </property>
-       <property name="verticalScrollMode">
-        <enum>QAbstractItemView::ScrollPerPixel</enum>
-       </property>
-       <property name="horizontalScrollMode">
-        <enum>QAbstractItemView::ScrollPerPixel</enum>
-       </property>
-       <property name="showGrid">
-        <bool>false</bool>
-       </property>
-       <property name="sortingEnabled">
+       <property name="widgetResizable">
         <bool>true</bool>
        </property>
-       <property name="wordWrap">
-        <bool>false</bool>
-       </property>
-       <property name="cornerButtonEnabled">
-        <bool>false</bool>
-       </property>
-       <property name="rowCount">
-        <number>3</number>
-       </property>
-       <property name="columnCount">
-        <number>3</number>
-       </property>
-       <attribute name="horizontalHeaderVisible">
-        <bool>false</bool>
-       </attribute>
-       <attribute name="horizontalHeaderDefaultSectionSize">
-        <number>77</number>
-       </attribute>
-       <attribute name="horizontalHeaderHighlightSections">
-        <bool>false</bool>
-       </attribute>
-       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-        <bool>false</bool>
-       </attribute>
-       <attribute name="verticalHeaderVisible">
-        <bool>false</bool>
-       </attribute>
-       <attribute name="verticalHeaderHighlightSections">
-        <bool>false</bool>
-       </attribute>
-       <row/>
-       <row/>
-       <row/>
-       <column/>
-       <column/>
-       <column/>
+       <widget class="QWidget" name="scrollAreaWidgetContents_2">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>316</width>
+          <height>130</height>
+         </rect>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <widget class="QWidget" name="widget" native="true">
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>42</height>
+            </size>
+           </property>
+           <property name="sizeIncrement">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QWidget{
+border: 1px solid rgb(212, 212, 212);
+color: White;
+	font: 10pt &quot;Inter V&quot;;
+}
+QWidget:hover{
+	background-color: rgba(212, 212, 212, 50);
+}</string>
+           </property>
+           <widget class="QLabel" name="label_9">
+            <property name="geometry">
+             <rect>
+              <x>45</x>
+              <y>5</y>
+              <width>221</width>
+              <height>31</height>
+             </rect>
+            </property>
+            <property name="font">
+             <font>
+              <family>Inter V</family>
+              <pointsize>10</pointsize>
+              <italic>false</italic>
+              <bold>false</bold>
+              <kerning>true</kerning>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">*{
+border: none;
+}
+*:hover{
+	background-color: transparent;
+}</string>
+            </property>
+            <property name="text">
+             <string>Смирнов Алексей Николаевич</string>
+            </property>
+            <property name="textFormat">
+             <enum>Qt::AutoText</enum>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_45">
+            <property name="geometry">
+             <rect>
+              <x>4</x>
+              <y>3</y>
+              <width>35</width>
+              <height>35</height>
+             </rect>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">*{
+border: none;
+}
+*:hover{
+	background-color: transparent;
+}</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="VEDA1.qrc">:/icons/icons/test_avatar.png</pixmap>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_46">
+            <property name="geometry">
+             <rect>
+              <x>265</x>
+              <y>7</y>
+              <width>25</width>
+              <height>25</height>
+             </rect>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">*{
+border: none;
+}
+*:hover{
+	background-color: transparent;
+}</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="VEDA1.qrc">:/icons/icons/crown.png</pixmap>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </widget>
      </widget>
      <widget class="QFrame" name="edite">
